# practice

./: .gitignore  .gitmodules  Dockerfile  cloc-option.txt  docker-compose.yml  docker-compose.yml.sample  initialize.sh  nvim-start  nvim-start.sh  start-nvim-container.sh
cpp/: CMakeLists.txt  main.cpp
cpp/interview/: larion_wq.hpp
cpp/leetcode/: can_be_valid.hpp  find_median_sorted_arrays.hpp  length_of_longest_substring.hpp  max_area.hpp  minimize_xor.hpp  solve_n_queen.hpp  solve_n_queens.hpp
cpp/log_util/: CMakeLists.txt  log.cpp
cpp/log_util/include/: log.hpp  log_util.hpp
cpp/test_cases/: leetcode_find_median_sorted_arrays_test.cpp  leetcode_length_of_longest_substring_test.cpp
cpp/tests/: interview.cpp  leetcode.cpp
python/: interactive.ipynb  leetcode.py  main.py  pyproject.toml  requirement  test.py
python/containers/: __init__.py  lists.py  tensor.py
python/deck_of_cards/: __init__.py  blackjack_deck_of_cards.py  blackjack_doc.py  deck_of_cards.py  poker_deck_of_cards.py  poker_doc.py  uno_doc.py
python/interview/: __init__.py  infect.py  larion_wq.py
python/leetcode/: FindMedianSortedArrays.py  __init__.py  bulb_switch.py  can_be_valid.py  can_jump.py  height_checker.py  is_long_pressed_name.py  length_of_longest_substring.py  merge_two_lists.py  min_difference.py  my_pow.py  solve_n_queens.py  total_n_queens.py  two_sum.py  valid_square.py
python/sodoku/: __init__.py  sodoku.py
python/sudoku/: __init__.py  sudoku.py
python/telegram_mini_app/: launch.py
python/test_cases/: TestFindMedianSortedArrays.py  TestLengthOfLongestSubstring.py  __init__.py  leetcode_height_checker_test.py  leetcode_is_long_pressed_name_test.py  sudoku_test.py  test_find_median_sorted_arrays.py  test_length_of_longest_substring.py  test_string.py
python/test_cases/leetcode/: bulb_switch_test.py  can_jump_test.py  find_median_sorted_arrays_test.py  height_checker_test.py  is_long_pressed_name_test.py  leetcode_bulb_switch_test.py  leetcode_can_jump_test.py  leetcode_find_median_sorted_arrays_test.py  leetcode_length_of_longest_substring_test.py  leetcode_min_difference_test.py  leetcode_my_pow_test.py  leetcode_two_sum_test.py  length_of_longest_substring_test.py  min_difference_test.py  my_pow_test.py  two_sum_test.py  valid_square_test.py
python/tests/: __init__.py  interview_test.py  leetcode_test.py  sudoku_test.py  test_util.py
python/utils/: __init__.py  benchmark_util.py  log_config.json  log_custom_queue_handler.py  log_json_formatter.py  log_util.py
rust/: Cargo.toml
rust/benches/: sudoku.rs
rust/collections/src/: btree_multiset.rs  lib.rs
rust/leetcode/: Cargo.toml
rust/leetcode/benches/: leetcode.rs
rust/leetcode/src/: can_be_valid.rs  cnds.rs  colored_cells.rs  find_missing_and_repeated_values.rs  lib.rs  median_sliding_window.rs  merge_two_lists.rs  monkey_move.rs  my_atoi.rs  my_pow.rs  reverse.rs  solve_n_queens.rs  two_sum.rs  xor.rs
rust/leetcode/tests/: leetcode.rs
rust/logger/: Cargo.toml
rust/logger/src/: lib.rs
rust/macro_utils/: Cargo.toml
rust/macro_utils/src/: comprehension.rs  lib.rs
rust/macros/src/: comprehension.rs  lib.rs  nest.rs
rust/src/: build.rs  lib.rs  main.rs  my_pow.rs  solve_n_queens.rs
rust/src/leetcode/: can_be_valid.rs  cnds.rs  count_non_decreasing_subarrays.rs  merge_two_lists.rs  minimize_xor.rs  mod.rs  monkey_move.rs  my_atoi.rs  my_pow.rs  reverse.rs  solve_n_queens.rs  xor.rs
rust/src/sudoku/: mod.rs
rust/sudoku/: Cargo.toml
rust/sudoku/benches/: pz6.rs  sudoku.rs
rust/sudoku/src/: board.rs  board_v2.rs  board_v3.rs  build.rs  grid.rs  lib.rs
rust/sudoku/tests/: pz6.rs  sudoku.rs
rust/sudoku_solver/: Cargo.toml
rust/sudoku_solver/benches/: sudoku.rs
rust/sudoku_solver/src/: lib.rs
rust/sudoku_solver/tests/: sudoku.rs
rust/tests/: leetcode.rs  sudoku.rs
(+36 files in other folders)
